--- a/StoreApp/Views/Items/AddItem.cshtml
+++ b/StoreApp/Views/Items/AddItem.cshtml
@@ -1,23 +1,22 @@
-﻿@model StoreApp.Core.Item
+﻿@using StoreApp.Models
+@model ItemViewModel
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Create";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Edit</h2>
+<h2>Add New Item</h2>
 
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("AddItem", "Items", FormMethod.Post ))
 {
     @Html.AntiForgeryToken()
-    
     <div class="form-horizontal">
         <h4>Item</h4>
+        @Html.HiddenFor(m => m.item_id)
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.item_id)
-
         <div class="form-group">
             @Html.LabelFor(model => model.name, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -33,7 +32,6 @@
                 @Html.ValidationMessageFor(model => model.price, "", new { @class = "text-danger" })
             </div>
         </div>
-
         <div class="form-group">
             @Html.LabelFor(model => model.quantity, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -44,7 +42,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Add" class="btn btn-default" />
             </div>
         </div>
     </div>
