--- a/StoreApp/Views/Items/Index.cshtml
+++ b/StoreApp/Views/Items/Index.cshtml
@@ -4,21 +4,19 @@
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
-<h2>Index</h2>
-
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
+@*Is tabular data so will be using a table*@
+<h2>Item List</h2>
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.name)
+          Name
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.price)
+           Price
         </th>
-        <th></th>
+        <th>
+            Quantity
+        </th>
     </tr>
 
 @foreach (var item in Model) {
@@ -30,11 +28,15 @@
             @Html.DisplayFor(modelItem => item.price)
         </td>
         <td>
+            @Html.DisplayFor(modelItem => item.quantity)
+        </td>
+        <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.item_id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.item_id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.item_id })
+            @Html.ActionLink("Delete", "DeleteItem", new { item_id=item.item_id })
         </td>
     </tr>
 }
-
 </table>
+<p>
+    @Html.ActionLink("Add New Item", "AddItem", new { @class = "btn btn-primary" })
+</p>
