--- a/StoreApp/Views/Shared/_Layout.cshtml
+++ b/StoreApp/Views/Shared/_Layout.cshtml
@@ -24,6 +24,8 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Item List", "Index", "Items")</li>
+                    <li>@Html.ActionLink("View Orders", "Index", "Orders")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
